# Sistema-Cobros-CPP

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Empleado.cpp  Empleado.h  Pago.cpp  Pago.h  Persona.cpp  Persona.h  README.md  Servicio.cpp  Servicio.h  SistemaCobros.cpp  SistemaCobros.h  main.cpp
